[package]
name = "hypershape"
description = "Multidimensional shape slicing and other geometric algorithms developed for Hyperspeedcube"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["cubing", "hypercubing", "rubik", "game", "4d"]
categories = ["algorithms", "mathematics"]
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
eyre = "0.6"
float-ord = "0.3.2"
itertools = "0.13.0"
parking_lot = "0.12.1"
rayon = "1.7.0"
slab = "0.4.8"
smallvec = { version = "1.9.0", features = ["const_new", "union"] }
thiserror = "2.0.3"
tinyset = "0.5.1"
tracing = "0.1.37"

hypermath = { path = "../hypermath" }

[dev-dependencies]
color-eyre = "0.6"
env_logger = "*"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt", "ansi", "json", "registry"] }
