[package]
name = "hypershape"
description = "Multidimensional shape slicing and other geometric algorithms developed for Hyperspeedcube"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["cubing", "hypercubing", "rubik", "game", "4d"]
categories = ["algorithms", "mathematics"]
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
hypermath = { workspace = true }

eyre = { workspace = true }
float-ord = { workspace = true }
itertools = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
slab = { workspace = true }
smallvec = { workspace = true, features = ["const_new"] }
thiserror = { workspace = true }
tinyset = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
color-eyre = { workspace = true }
env_logger = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
