[package]
name = "hyperspeedcube"
description = "Multidimensional twisty puzzle simulator"
version = "2.0.0-pre.17"
authors = ["HactarCE"]
edition.workspace = true
homepage = "https://ajfarkas.dev/hyperspeedcube/"
repository.workspace = true
keywords = ["cubing", "hypercubing", "rubik", "game", "4d"]
categories = ["games", "mathematics", "simulation"]
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
bitflags = "2.4.2"
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
bytemuck = { version = "1.9.1", features = ["derive"] }
cgmath = "0.18.0"
colorous = "1.0.10"
comrak = "0.29.0"
config = { version = "0.13.4", features = ["preserve_order"] } # blocked on https://github.com/rust-cli/config-rs/issues/531
# Fork of color-eyre that does not re-export color_owo, which otherwise clogs editor completions
color-eyre = { git = "https://github.com/FlareFlo/color-eyre.git", rev = "3bc103d5ffd7e26a71a6894579ef721e7b6c3ce1", default-features = false, features = ["track-caller", "capture-spantrace"] }
empfindung = "0.2.6"
eyre = "0.6"
directories = "5.0.1"
env_logger = "0.11.5"
float-ord = "0.3.2"
getrandom = { version = "*", features = ["js"] } # TODO: prefer `rand` crate
image = "0.25.5"
include_dir = "0.7.4"
indexmap = { version = "2.4.0", features = ["serde"] } # must match serde_yml
instant = "0.1.13"
itertools = "0.13.0"
key-names = { git = "https://github.com/HactarCE/key-names.git", tag = "v1.5.1", features = ["winit"] }
lazy_static = "1.5.0"
log = "0.4.17"
monostate = "0.1.1"
names = { version = "0.14.0", default-features = false }
num_enum = "0.7.3"
oklab = "1.0.1"
once_cell = "1.9.0"
opener = "0.7.0"
optick = { version = "1.3.4", optional = true }
optick-attr = { version = "0.3.0", optional = true }
parking_lot = "0.12.1"
png = "0.17.5"
pollster = "0.4.0"
rand = "*"
regex = "1.6.0"
rfd = "0.15.0"
rgb_crate = { package = "rgb", version = "*" } # as required by empfindung
send_wrapper = "0.6"
serde = { version = "1.0.144", features = ["derive"] }
serde_yml = "0.0.12"
smallvec = { version = "1.8.0", features = ["serde", "union"] }
strum = { version = "0.26.3", features = ["derive"] }
sublime_fuzzy = "0.7.0"
thiserror = "2.0.3"
time = { version = "0.3.7", features = ["local-offset"] }

hypermath = { path = "../hypermath" }
hyperpuzzle = { path = "../hyperpuzzle" }
hypershape = { path = "../hypershape" }

# Windowing and UI (versions must match; generally limited by egui_dock)
eframe = { version = "0.29.1", default-features = false, features = ["accesskit", "default_fonts", "wayland", "web_screen_reader", "wgpu", "x11"] }
egui = "0.29.1"
egui_dock = "0.14.0"
egui_extras = { version = "0.29.1", features = ["svg"] }
winit = { version = "0.30.5", features = ["serde"] } # must match eframe
wgpu = { version = "22.0.0", features = ["webgl"] } # must match eframe

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
human-panic = "2.0.2"
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
egui-winit = { version = "0.29.1", default-features = false, features = ["links"] }
js-sys = "=0.3.72"
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "=0.3.72", features = [
    "CanvasRenderingContext2d",
    "Clipboard",
    "ClipboardEvent",
    "DataTransfer",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Storage",
    "Window",
] }

[features]
optick = ["dep:optick", "dep:optick-attr"]
deadlock_detection = ["parking_lot/deadlock_detection"]

[build-dependencies]
hyperstrings = { path = "../hyperstrings" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
FileDescription = "Hyperspeedcube"
ProductName = "Hyperspeedcube"
ProductVersion = "2.0.0-pre.17"
OriginalFilename = "hyperspeedcube.exe"
LegalCopyright = "Copyright © 2024 HactarCE"

[package.metadata.bundle]
name = "Hyperspeedcube"
identifier = "dev.ajfarkas.hyperspeedcube"
icon = ["resources/icon/*.png", "resources/icon/*.ico"]
copyright = "Copyright © 2024 HactarCE"
category = "Puzzle Game"
