[package]
name = "hyperspeedcube"
description = "Multidimensional twisty puzzle simulator"
version = "2.0.0-pre.18"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["cubing", "hypercubing", "rubik", "game", "4d"]
categories = ["games", "mathematics", "simulation"]
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
hyperdraw = { workspace = true }
hypermath = { workspace = true }
hyperpaths = { workspace = true }
hyperprefs = { workspace = true }
hyperpuzzle = { workspace = true }
hyperpuzzle_core = { workspace = true, features = ["ecolor", "oklab"] }
hyperpuzzle_lua = { workspace = true, features = ["hyperpaths"] }
hyperpuzzle_log = { workspace = true }
hyperpuzzle_view = { workspace = true }
hyperstats = { workspace = true }

cgmath = { workspace = true }
clap = { workspace = true }
clio = { workspace = true }
color-eyre = { workspace = true }
comrak = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_dock = { workspace = true }
empfindung = { workspace = true }
env_logger = { workspace = true }
eyre = { workspace = true }
float-ord = { workspace = true }
image = { workspace = true }
itertools = { workspace = true }
key-names = { workspace = true }
lab = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
names = { workspace = true }
opener = { workspace = true }
parking_lot = { workspace = true }
pollster = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
smallvec = { workspace = true }
strum = { workspace = true }
sublime_fuzzy = { workspace = true }
web-time = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }

# Profiling
optick = { version = "1.3.4", optional = true }
optick-attr = { version = "0.3.0", optional = true }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
# egui-winit = { version = "0.29.1", default-features = false, features = ["links"] } # TODO: is this necessary?
js-sys = "=0.3.72"
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "=0.3.72", features = [
    "CanvasRenderingContext2d",
    "Clipboard",
    "ClipboardEvent",
    "DataTransfer",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Storage",
    "Window",
] }

[features]
optick = ["dep:optick", "dep:optick-attr"]
deadlock_detection = ["parking_lot/deadlock_detection"]

[build-dependencies]
hyperstrings = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
FileDescription = "Hyperspeedcube"
ProductName = "Hyperspeedcube"
ProductVersion = "2.0.0-pre.18"
OriginalFilename = "hyperspeedcube.exe"
LegalCopyright = "Copyright © 2024 HactarCE"

[package.metadata.bundle]
name = "Hyperspeedcube"
identifier = "dev.ajfarkas.hyperspeedcube"
icon = ["resources/icon/*.png", "resources/icon/*.ico"]
copyright = "Copyright © 2024 HactarCE"
category = "Puzzle Game"
