[package]
name = "hyperstats"
description = "Log file management for Hyperspeedcube"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["user-data", "config-directory", "path", "folder", "app_dirs"]
categories = ["filesystem"]
license = "MIT OR Apache-2.0"

[dependencies]
hyperkdl = { workspace = true }
hyperkdl_derive = { workspace = true }
hyperpaths = { workspace = true }
hyperpuzzle_library = { workspace = true }

eyre = { workspace = true }
kdl = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
