[package]
name = "ndpuzzle"
version = "0.1.0"
authors = ["HactarCE", "Luna Harran"]
edition = "2021"
repository = "https://github.com/HactarCE/Hyperspeedcube/"
license = "MIT OR Apache-2.0"

[dependencies]
itertools = "0.10.3"
num-traits = "0.2.15"
slab = "0.4.7"
smallvec = { version = "1.9.0", features = ["union"] }
thiserror = "1.0.34"

[dev-dependencies]
cgmath = { version = "0.18.0", features = ["serde"] }
eframe = { version = "0.18.0", features = ["dark-light", "persistence"] }
serde = { version = "1.0", features = ["derive"] }
