[package]
name = "ndpuzzle"
version = "0.1.0"
authors = ["HactarCE", "Luna Harran"]
edition = "2021"
repository = "https://github.com/HactarCE/Hyperspeedcube/"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.65"
cgmath = "0.18.0"
enum-iterator = "1.1.3"
itertools = "0.10.3"
lazy_static = "1.4.0"
num-traits = "0.2.15"
rand = "0.8.5"
regex = "1.6.0"
serde = "1.0.144"
slab = "0.4.7"
smallvec = { version = "1.9.0", features = ["union"] }
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.34"

[dev-dependencies]
cgmath = { version = "0.18.0", features = ["serde"] }
eframe = { version = "0.18.0", features = ["dark-light", "persistence"] }
proptest = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.23"
