[package]
name = "ndpuzzle"
version = "0.1.0"
authors = ["HactarCE", "Luna Harran"]
edition = "2021"
repository = "https://github.com/HactarCE/Hyperspeedcube/"
license = "MIT OR Apache-2.0"

[dependencies]
ahash =  { version = "0.8.2", features = ["serde"] }
anyhow = "1.0.65"
approx = "0.5.1"
ball-tree = "0.4.0"
bitflags = "1.3.2"
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
bytemuck = { version = "1.13.1", optional = true }
cgmath = "0.18.0"
enum-iterator = "1.1.3"
float-ord = "0.3.2"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.17"
num-traits = "0.2.15"
parking_lot = "0.12.1"
rand = "0.8.5"
rayon = "1.7.0"
regex = "1.6.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.8.23"
slab = "0.4.7"
smallvec = { version = "1.9.0", features = ["const_new", "serde", "union"] }
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.34"
tinyset = "0.4.15"

[dev-dependencies]
cgmath = { version = "0.18.0", features = ["serde"] }
eframe = { version = "0.18.0", features = ["dark-light", "persistence"] }
proptest = "1.0.0"
