[package]
name = "hypercubing_leaderboards_client"
description = "Hypercubing Leaderboards client"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = []
categories = []
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
ureq = { workspace = true, features = ["multipart"] }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
