[package]
name = "hyperkdl"
description = "Opinionated KDL serialization & deserialization for Hyperspeedcube"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["serialization", "serialize-deserialize"]
categories = ["encoding"]
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
kdl.workspace = true
miette.workspace = true
