[package]
name = "hypermath"
description = "Multidimensional vector, matrix, and conformal geometric algebra primitives developed for Hyperspeedcube"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = [
    "math",
    "rotor",
    "geometric-algebra",
    "conformal-geometric-algebra",
    "4d",
]
categories = ["mathematics", "data-structures"]
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
approx_collections.workspace = true
ball-tree.workspace = true
bitflags.workspace = true
bytemuck = { workspace = true, optional = true }
float-ord.workspace = true
itertools.workspace = true
log.workspace = true
num-traits.workspace = true
serde = { workspace = true, optional = true }
smallvec = { workspace = true, features = ["const_new"] }
tinyset.workspace = true

[features]
serde = ["dep:serde", "smallvec/serde"]
