[package]
name = "hyperpaths"
description = "Paths for Hyperspeedcube"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["user-data", "config-directory", "path", "folder", "app_dirs"]
categories = ["filesystem"]
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
directories.workspace = true
eyre.workspace = true
lazy_static.workspace = true
log.workspace = true
time.workspace = true
