[package]
name = "hyperprefs"
description = "Preferences for Hyperspeedcube"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["cubing", "hypercubing", "rubik", "4d"]
categories = ["filesystem"]
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
hypermath = { workspace = true }
hyperpaths = { workspace = true }
hyperpuzzle_core = { workspace = true, features = ["ecolor"] }

bitvec = { workspace = true }
colorous = { workspace = true }
config = { workspace = true }
eyre = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
key-names = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
strum = { workspace = true }
winit = { workspace = true }
