[package]
name = "hyperpuzzle"
description = "Puzzle API for Hyperspeedcube"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["cubing", "hypercubing", "rubik", "4d"]
categories = ["simulation"]
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
hyperpuzzle_core = { workspace = true }
hyperpuzzle_impl_nd_euclid = { workspace = true }
hyperpuzzle_rhai = { workspace = true }

lazy_static = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
hyperpuzzle_log = { workspace = true }

eyre = { workspace = true }

[features]
ecolor = ["hyperpuzzle_core/ecolor"]
oklab = ["hyperpuzzle_core/oklab"]
