[package]
name = "hyperpuzzle_core"
description = "Twisty puzzle API for Hyperspeedcube"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["cubing", "hypercubing", "rubik", "4d"]
categories = ["algorithms", "mathematics", "simulation"]
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
hypermath = { workspace = true }
hypershape = { workspace = true }
hyperspeedcube_cli_types = { workspace = true }

chrono = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
human-sort = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
kdl = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
nom = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
smallvec = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tinyset = { workspace = true }

# timecheck
base64 = { workspace = true, optional = true }
timecheck = { workspace = true, optional = true }

# Color conversions
ecolor = { workspace = true, optional = true }
oklab = { workspace = true, optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
timecheck = ["dep:base64", "dep:timecheck"]
default = ["timecheck"]

[[bench]]
name = "name_spec_bench"
harness = false
